--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,25 +21,25 @@ services:
     ports:
       - 8001:8080
     environment:
-      #- DEBUG=True
-      - CORS_ORIGIN_ALLOW_ALL=True
-      - DB_NAME=netbox
-      - DB_USER=netbox
-      - DB_PASSWORD=netbox
-      - DB_HOST=postgres
-      - REDIS_HOST=redis
-      - REDIS_DATABASE=0
-      - REDIS_SSL=false
-      - REDIS_CACHE_HOST=redis
-      - REDIS_CACHE_DATABASE=1
-      - REDIS_CACHE_SSL=false
-      - SECRET_KEY=0123456789abcdefghij0123456789abcdefghij0123456789
-      - SKIP_STARTUP_SCRIPTS=false
-      - SKIP_SUPERUSER=false
-      - SUPERUSER_NAME=admin
-      - SUPERUSER_EMAIL=admin@example.com
-      - SUPERUSER_PASSWORD=admin
-      - SUPERUSER_API_TOKEN=${NETBOX_API_TOKEN:-0123456789abcdef0123456789abcdef01234567}
+      #DEBUG: "True"
+      CORS_ORIGIN_ALLOW_ALL: "True"
+      DB_NAME: netbox
+      DB_USER: netbox
+      DB_PASSWORD: netbox
+      DB_HOST: postgres
+      REDIS_HOST: redis
+      REDIS_DATABASE: "0"
+      REDIS_SSL: "false"
+      REDIS_CACHE_HOST: redis
+      REDIS_CACHE_DATABASE: "1"
+      REDIS_CACHE_SSL: false
+      SECRET_KEY: 0123456789abcdefghij0123456789abcdefghij0123456789
+      SKIP_STARTUP_SCRIPTS: "false"
+      SKIP_SUPERUSER: "false"
+      SUPERUSER_NAME: admin
+      SUPERUSER_EMAIL: admin@example.com
+      SUPERUSER_PASSWORD: admin
+      SUPERUSER_API_TOKEN: ${NETBOX_API_TOKEN:-0123456789abcdef0123456789abcdef01234567}
     volumes:
       - netbox-media:/media
     healthcheck:
