Avoid waiting forever for worker container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,6 +51,7 @@ services:
 
   netbox-worker:
     <<: *netbox-base
+    healthcheck: {}
     ports: []
     command:
       - /opt/netbox/venv/bin/python
