--- a/client/tfgen-overlay.yaml
+++ b/client/tfgen-overlay.yaml
@@ -3,14 +3,14 @@ info:
   title: Overlay for TF generator
   version: 0.0.0
 actions:
-  - target: "$"
-    update:
-      components:
-        schemas:
-          ForeignID:
-            type: integer
   - target: "$.components.schemas.*.properties.*[?(@.oneOf)]"
     update:
       type: integer
       description: Reference to foreign ID
       oneOf: null
+  - target: "$.components.schemas.*.properties.tags.items"
+    remove: true
+  - target: "$.components.schemas.*.properties.tags"
+    update:
+      items:
+        type: string
