Add aspathlistrule resource

--- a/client/tfgen_config.yaml
+++ b/client/tfgen_config.yaml
@@ -85,3 +85,19 @@ resources:
     schema:
       ignores:
         - custom_fields
+  aspathlistrule:
+    create:
+      path: /api/plugins/bgp/aspath-list-rule/
+      method: POST
+    read:
+      path: /api/plugins/bgp/aspath-list-rule/{id}/
+      method: GET
+    update:
+      path: /api/plugins/bgp/aspath-list-rule/{id}/
+      method: PUT
+    delete:
+      path: /api/plugins/bgp/aspath-list-rule/{id}/
+      method: DELETE
+    schema:
+      ignores:
+        - custom_fields
