--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,9 @@ services:
     build:
       context: integration
       args:
+        # renovate: datasource=github-releases depName=netbox-community/netbox
         NETBOX_VERSION: ${NETBOX_VERSION:-4.4.6}
+        # renovate: datasource=github-releases depName=netbox-community/netbox-bgp
         NETBOX_BGP_VERSION: ${NETBOX_BGP_VERSION:-0.17.0}
     depends_on:
       - postgres
